Añadido un forEach para cada links con id test

--- a/nodeapi/public/hello.html
+++ b/nodeapi/public/hello.html
@@ -12,7 +12,7 @@
     <p>Done by Juan Marcos</p>
     <p id="demo"></p>
     <div>
-        <p id="linksNodeapi"></p>
+<!--         <p id="linksNodeapi"></p>
         <ul>
             <li><a href="http://localhost:3000">home</a></li>
             <li><a href="http://localhost:3000/users">users</a></li>
@@ -20,6 +20,11 @@
             <li><a href="http://localhost:3000/hello">Just told you hello</a></li>
             <li><a href="http://localhost:3000/hello.html">Hello Page</a></li>    
         </ul>
-      </div>
+      </div> -->
+
+    <div>
+        <ul id="test"></ul>
+    </div>
+
 </body>
 </html>
