correct links li - a

--- a/nodeapi/public/hello.html
+++ b/nodeapi/public/hello.html
@@ -12,7 +12,16 @@
     <p>Done by Juan Marcos</p>
     <p id="demo"></p>
     <div>
-<!--         <p id="linksNodeapi"></p>
+    <div>
+        <ul id="test"></ul>
+    </div>
+
+</body>
+</html>
+
+
+<!-- Version Anterior !!!         
+    <p id="linksNodeapi"></p>
         <ul>
             <li><a href="http://localhost:3000">home</a></li>
             <li><a href="http://localhost:3000/users">users</a></li>
@@ -21,10 +30,3 @@
             <li><a href="http://localhost:3000/hello.html">Hello Page</a></li>    
         </ul>
       </div> -->
-
-    <div>
-        <ul id="test"></ul>
-    </div>
-
-</body>
-</html>
