navbar and download file in user webpage

--- a/nodeapi/other/index.html
+++ b/nodeapi/other/index.html
@@ -11,14 +11,17 @@
 
 <body>
 
-    <h1>OTROS</h1>
+    <nav>
+        <ul id="test"></ul>
+    </nav>
+    <br>
+    <h1>OTHER</h1>
     <p>Este servicios pretende servir ficheros estáticos</p>        
     </div>
 
     <div>
-        <ul id="demo">
-
-        </ul>
+        <ul id="demo"></ul>
     </div>
+
 </body>
 </html>
