--- a/nodeapi/public/hello.html
+++ b/nodeapi/public/hello.html
@@ -8,13 +8,16 @@
     <title>HELLO HTML</title>
 </head>
 <body>
+
+    <nav>
+        <ul id="test"></ul>
+    </nav>
+    <br>
     <h1>HELLO html Document in Public Folder</h1>
     <p>Done by Juan Marcos</p>
     <p id="demo"></p>
     <div>
-    <div>
-        <ul id="test"></ul>
-    </div>
+
 
 </body>
 </html>
